--- a/DHT22_LCD_STM32_27.ioc
+++ b/DHT22_LCD_STM32_27.ioc
@@ -1,70 +1,52 @@
 #MicroXplorer Configuration settings - do not modify
 Mcu.Family=STM32L1
-RCC.MSI_VALUE=2097000
 ProjectManager.MainLocation=Core/Src
-PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PH0-OSC_IN.Locked=true
-ProjectManager.ProjectFileName=DHT22_LCD_STM32_27.ioc
 PH0-OSC_IN.Signal=RCC_OSC_IN
 USART2.IPParameters=VirtualMode
 NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32L152RETx
-Mcu.PinsNb=16
-ProjectManager.NoMain=false
+ADC.Rank-0\#ChannelRegularConversion=1
+USART1.BaudRate=9600
 RCC.PLLCLKFreq_Value=32000000
 PA14.GPIO_Label=TCK
-PA0-WKUP1.Locked=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM7_Init-TIM7-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true
-PA0-WKUP1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
-SH.GPXTI0.ConfNb=1
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM7_Init-TIM7-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_ADC_Init-ADC-false-HAL-true
+PC3.Locked=true
 RCC.RTCFreq_Value=32768
 PA3.GPIOParameters=GPIO_Label
-ProjectManager.DefaultFWLocation=true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-ProjectManager.DeletePrevious=true
-PC14-OSC32_IN.Signal=RCC_OSC32_IN
-RCC.TimerFreq_Value=32000000
-boardIOC=true
+USART1.IPParameters=VirtualMode,BaudRate
 PA2.GPIOParameters=GPIO_Label
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PinOutPanel.RotationAngle=0
-RCC.FamilyName=M
 PA0-WKUP1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
 SH.GPXTI13.0=GPIO_EXTI13
 VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
-PA13.Signal=SYS_JTMS-SWDIO
-PA3.Mode=Asynchronous
-Mcu.IP4=TIM7
+Mcu.IP4=SYS
 RCC.FCLKCortexFreq_Value=32000000
-Mcu.IP5=USART2
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP0=I2C1
-Mcu.IP1=NVIC
+Mcu.IP5=TIM7
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP0=ADC
+Mcu.IP1=I2C1
 RCC.PLLDIV=RCC_PLL_DIV3
-PC15-OSC32_OUT.Locked=true
 Mcu.UserConstants=
-ProjectManager.TargetToolchain=STM32CubeIDE
+PA4.Mode=IN4
 SH.GPXTI13.ConfNb=1
 Mcu.ThirdPartyNb=0
 RCC.HCLKFreq_Value=32000000
-Mcu.IPNb=6
+Mcu.IPNb=8
 ProjectManager.PreviousToolchain=STM32CubeIDE
 PC13-WKUP2.GPIO_Label=B1 [Blue PushButton]
-PB9.Mode=I2C
 RCC.APB2TimFreq_Value=32000000
-PA0-WKUP1.Signal=GPXTI0
-PB9.Locked=true
-Mcu.Pin6=PA2
+PC3.Signal=GPIO_Output
+Mcu.Pin6=PA0-WKUP1
 TIM7.Period=10-1
-Mcu.Pin7=PA3
-ProjectManager.RegisterCallBack=
-Mcu.Pin8=PA5
-Mcu.Pin9=PA13
-PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA3
 RCC.AHBFreq_Value=32000000
 PH0-OSC_IN.Mode=HSE-External-Clock-Source
 Mcu.Pin0=PC13-WKUP2
@@ -72,109 +54,163 @@ Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin5=PA0-WKUP1
-PA5.Signal=GPIO_Output
+Mcu.Pin5=PC3
 ProjectManager.ProjectBuild=false
 RCC.HSE_VALUE=8000000
 PC13-WKUP2.Signal=GPXTI13
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-RCC.MCOPinFreq_Value=32000000
-TIM7.Prescaler=32-1
-board=NUCLEO-L152RE
-RCC.VCOOutputFreq_Value=96000000
+PA4.Locked=true
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true
-ProjectManager.LastFirmware=true
 RCC.PLLMUL=RCC_PLL_MUL6
 PC13-WKUP2.GPIOParameters=GPIO_Label
 ProjectManager.FirmwarePackage=STM32Cube FW_L1 V1.10.2
 MxDb.Version=DB.6.0.20
-RCC.APB2Freq_Value=32000000
 VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
+PA1.GPIOParameters=GPIO_Label
 ProjectManager.BackupPrevious=false
-TIM7.IPParameters=Prescaler,Period
-MxCube.Version=6.2.0
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 RCC.RTCClockSelectionVirtual=RCC_RTCCLKSOURCE_LSE
 PA14.Mode=Serial_Wire
-RCC.LCDFreq_Value=32768
 File.Version=6
-VP_SYS_VS_Systick.Mode=SysTick
 PH1-OSC_OUT.Locked=true
-PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PB3.GPIOParameters=GPIO_Label
 PB8.Locked=true
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-PA13.Mode=Serial_Wire
-ProjectManager.FreePins=false
 NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,LCDFreq_Value,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLDIV,PLLMUL,PWRFreq_Value,RTCClockSelectionVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USBOutput,VCOOutputFreq_Value
-ProjectManager.AskForMigrate=true
-Mcu.Name=STM32L152RETx
 ProjectManager.HalAssertFull=false
-RCC.RTCHSEDivFreq_Value=4000000
-PA2.Signal=USART2_TX
-PA13.GPIO_Label=TMS
 ProjectManager.ProjectName=DHT22_LCD_STM32_27
-ProjectManager.UnderRoot=true
 PA13.GPIOParameters=GPIO_Label
-ProjectManager.CoupleFile=true
-RCC.48MHZClocksFreq_Value=48000000
-PB3.Signal=SYS_JTDO-TRACESWO
-NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-RCC.SYSCLKFreq_VALUE=32000000
 Mcu.Package=LQFP64
 PB9.Signal=I2C1_SDA
-PC13-WKUP2.Locked=true
-PA3.Locked=true
 PA5.Locked=true
-PA5.GPIO_Label=LD2 [Green Led]
-NVIC.ForceEnableDMAVector=true
-KeepUserPlacement=false
 USART2.VirtualMode=VM_ASYNC
 RCC.USBOutput=48000000
-PA14.GPIOParameters=GPIO_Label
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-PA13.Locked=true
 PA14.Locked=true
-ProjectManager.CompilerOptimize=6
 ProjectManager.ToolChainLocation=
 PA2.GPIO_Label=USART_TX
 RCC.LSI_VALUE=37000
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 SH.GPXTI0.0=GPIO_EXTI0
-PA14.Signal=SYS_JTCK-SWCLK
-PA0-WKUP1.GPIO_Label=DHT22_SENS
-ProjectManager.HeapSize=0x200
-Mcu.Pin15=VP_TIM7_VS_ClockSourceINT
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-PA0-WKUP1.GPIO_PuPd=GPIO_PULLUP
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+PA10.Signal=USART1_RX
+ADC.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
 PA5.GPIOParameters=GPIO_Label
-Mcu.Pin13=PB9
-Mcu.Pin14=VP_SYS_VS_Systick
-ProjectManager.ComputerToolchain=false
-RCC.HSI_VALUE=16000000
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
-Mcu.Pin11=PB3
-Mcu.Pin12=PB8
-PB8.Mode=I2C
-Mcu.Pin10=PA14
 RCC.APB1TimFreq_Value=32000000
-PA2.Mode=Asynchronous
-PB8.Signal=I2C1_SCL
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-RCC.PWRFreq_Value=32000000
-RCC.APB1Freq_Value=32000000
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+PA4.GPIO_Label=WTR_LVL
 NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 ProjectManager.CustomerFirmwarePackage=
-ProjectManager.DeviceId=STM32L152RETx
 PC14-OSC32_IN.Locked=true
-ProjectManager.LibraryCopy=1
 PB3.Locked=true
-PA3.GPIO_Label=USART_RX
 PA3.Signal=USART2_RX
 RCC.TIMFreq_Value=32000000
 PA2.Locked=true
 PB3.GPIO_Label=SWO
+RCC.MSI_VALUE=2097000
+PC15-OSC32_OUT.Mode=LSE-External-Oscillator
+ProjectManager.ProjectFileName=DHT22_LCD_STM32_27.ioc
+PA10.Mode=Asynchronous
+Mcu.PinsNb=21
+ProjectManager.NoMain=false
+PA0-WKUP1.Locked=true
+PA0-WKUP1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+SH.GPXTI0.ConfNb=1
+ProjectManager.DefaultFWLocation=true
+ADC.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ProjectManager.DeletePrevious=true
+PC14-OSC32_IN.Signal=RCC_OSC32_IN
+RCC.TimerFreq_Value=32000000
+boardIOC=true
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+RCC.FamilyName=M
+PC3.GPIOParameters=GPIO_Label
+PA13.Signal=SYS_JTMS-SWDIO
+PA3.Mode=Asynchronous
+PA9.Mode=Asynchronous
+PC15-OSC32_OUT.Locked=true
+ProjectManager.TargetToolchain=STM32CubeIDE
+PB9.Mode=I2C
+PA9.Signal=USART1_TX
+PA0-WKUP1.Signal=GPXTI0
+PB9.Locked=true
+ADC.NbrOfConversionFlag=1
+ProjectManager.RegisterCallBack=
+PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PA1.Signal=ADC_IN1
+PA5.Signal=GPIO_Output
+RCC.MCOPinFreq_Value=32000000
+TIM7.Prescaler=32-1
+board=NUCLEO-L152RE
+RCC.VCOOutputFreq_Value=96000000
+ProjectManager.LastFirmware=true
+RCC.APB2Freq_Value=32000000
+PA1.Mode=IN1
+TIM7.IPParameters=Prescaler,Period
+MxCube.Version=6.2.0
+RCC.LCDFreq_Value=32768
+PA1.GPIO_Label=HUM_SOL
+VP_SYS_VS_Systick.Mode=SysTick
+PH1-OSC_OUT.Signal=RCC_OSC_OUT
+PA9.Locked=true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+PA4.GPIOParameters=GPIO_Label
+PA13.Mode=Serial_Wire
+ProjectManager.FreePins=false
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,LCDFreq_Value,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLDIV,PLLMUL,PWRFreq_Value,RTCClockSelectionVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USBOutput,VCOOutputFreq_Value
+ProjectManager.AskForMigrate=true
+Mcu.Name=STM32L152RETx
+RCC.RTCHSEDivFreq_Value=4000000
+PA13.GPIO_Label=TMS
+PA2.Signal=USART2_TX
+ProjectManager.UnderRoot=true
+Mcu.IP6=USART1
+Mcu.IP7=USART2
+ProjectManager.CoupleFile=true
+RCC.48MHZClocksFreq_Value=48000000
+PB3.Signal=SYS_JTDO-TRACESWO
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+PA4.Signal=ADC_IN4
+RCC.SYSCLKFreq_VALUE=32000000
+PA1.Locked=true
+Mcu.Pin20=VP_TIM7_VS_ClockSourceINT
+PA3.Locked=true
+PC13-WKUP2.Locked=true
+PA5.GPIO_Label=LD2 [Green Led]
+PA10.Locked=true
+NVIC.ForceEnableDMAVector=true
+KeepUserPlacement=false
+PA14.GPIOParameters=GPIO_Label
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+PA13.Locked=true
+USART1.VirtualMode=VM_ASYNC
+ProjectManager.CompilerOptimize=6
+PA14.Signal=SYS_JTCK-SWCLK
+PA0-WKUP1.GPIO_Label=DHT22_SENS
+ProjectManager.HeapSize=0x200
+Mcu.Pin15=PA14
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+PA0-WKUP1.GPIO_PuPd=GPIO_PULLUP
+Mcu.Pin16=PB3
+Mcu.Pin13=PA10
+Mcu.Pin14=PA13
+Mcu.Pin19=VP_SYS_VS_Systick
+ProjectManager.ComputerToolchain=false
+Mcu.Pin17=PB8
+RCC.HSI_VALUE=16000000
+Mcu.Pin18=PB9
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
+Mcu.Pin11=PA5
+Mcu.Pin12=PA9
+PB8.Mode=I2C
+Mcu.Pin10=PA4
+PA2.Mode=Asynchronous
+PB8.Signal=I2C1_SCL
+PC3.GPIO_Label=POMPE
+RCC.PWRFreq_Value=32000000
+ADC.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_4CYCLES
+RCC.APB1Freq_Value=32000000
+ProjectManager.DeviceId=STM32L152RETx
+ProjectManager.LibraryCopy=1
+PA3.GPIO_Label=USART_RX
 isbadioc=false
