working but without motor control added

--- a/DHT22_LCD_STM32_27.ioc
+++ b/DHT22_LCD_STM32_27.ioc
@@ -51,6 +51,7 @@ RCC.AHBFreq_Value=32000000
 PH0-OSC_IN.Mode=HSE-External-Clock-Source
 Mcu.Pin0=PC13-WKUP2
 Mcu.Pin1=PC14-OSC32_IN
+GPIO.groupedBy=Group By Peripherals
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
@@ -213,4 +214,4 @@ RCC.APB1Freq_Value=32000000
 ProjectManager.DeviceId=STM32L152RETx
 ProjectManager.LibraryCopy=1
 PA3.GPIO_Label=USART_RX
-isbadioc=false
+isbadioc=true
